# csce-e114-grad-project

./: .gitignore  README.md  eleventy.config.js  netlify.toml  package.json
_data/: metadata.js
_includes/layouts/: base.njk  home.njk
content/: demo.njk  go.md  howto.md  index.md  index.njk  rust.md  setup.md  what.md  why.md
netlify/functions/dice/: Cargo.toml
netlify/functions/dice/src/: main.rs
netlify/functions/go-dice/: go.mod  main.go
netlify/functions/rust-dice/: Cargo.toml
netlify/functions/rust-dice/src/: main.rs
public/css/: bulma.css  index.css
