[package]
edition = "2018"
name = "dice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.8"
http = "0.2.9"
lambda_runtime = "0.8"
log = "0.4.17"
rand = {version="0.8.5", features=["small_rng"]}
simple_logger = "4.1"
tokio = "1"
